Prepare for deployment

--- a/client/index.html
+++ b/client/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <meta name="description" content="BizAI Boosters - AI-powered tools designed specifically for Indian small businesses to automate daily operations and boost growth." />
-    <title>BizAI Boosters - AI-Powered Tools for Indian Businesses</title>
+    <meta name="description" content="Fenzo AI Boosters - AI-powered tools designed specifically for Indian small businesses to automate daily operations and boost growth." />
+    <title>Fenzo AI Boosters - AI-Powered Tools for Indian Businesses</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="BizAI Boosters - AI Tools for Indian Businesses" />
-    <meta property="og:description" content="Automate operations and boost growth with AI tools designed specifically for small Indian businesses." />
+    <meta property="og:title" content="Fenzo AI Boosters - AI Tools for Indian Businesses" />
+    <meta property="og:description" content="Transform your Indian business with AI-powered automation tools. Boost efficiency, engage customers, and drive growth." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://bizaiboosters.in" />
-    <meta property="og:image" content="https://bizaiboosters.in/og-image.jpg" />
+    <meta property="og:url" content="https://fenzoai.in" />
+    <meta property="og:image" content="https://fenzoai.in/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
